--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 	{% load static %}
 	<meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
@@ -17,19 +17,19 @@
 <body>
 	<header>
 	<!--IMAGEN PRINCIPAL-->
-		<div class="container-fuild d-flex justify-content-center imagenlogo">			
+		<div class="container-fuild d-flex justify-content-center imagenlogo">
 			<img src="{% static 'portada/image/LogoINFORINGA-01.png' %}" width="150" height="auto" class="img-responsive align-center d-md-none d-lg-block d-sm-none d-md-block d-none d-sm-block" alt="Responsive image">
-		</div>		
+		</div>
 	<!--FIN DE IMAGEN PRINCIPAL-->
 	</header>
 	<!--NAVBAR-->
 	<nav class="navbar navbar-expand-lg navbar-dark sticky-top" style="background-color: #007F5F;">
 		<a class="navbar-brand text-white" href="#">
-			<img src="{% static 'portada/image/INFORINGAlogochiquito.png' %}" width="40" height="40" class="d-inline-block align-top" alt="" loading="logo">				
+			<img src="{% static 'portada/image/INFORINGAlogochiquito.png' %}" width="40" height="40" class="d-inline-block align-top" alt="" loading="logo">
 		</a>
 		<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
-		</button>		  
+		</button>
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo02">
 			<div class="text-center mr-auto">
 				<ul class="navbar-nav">
@@ -40,14 +40,14 @@
 						<a href="#" class="btn btn-success">Crear Post</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="nav-link text-white" href="#">Ultimos Posteos</a>
+						<a class="nav-link text-white" href="{% url 'posts:Posts' %}">Ultimos Posteos</a>
 					</li>
 					<li class="nav-item">
 						<a href="#" class="nav-link text-white">Ultimos Comentarios</a>
-					</li>					
-				</ul>				
+					</li>
+				</ul>
 			</div>
-			<div class="d-flex justify-content-center">				
+			<div class="d-flex justify-content-center">
 				{% if user.is_authenticated %}
 				<div>
 					<a href="#" class="btn btn-danger mr-2 text-uppercase" style="background-color: #BF6300;">BIENVENIDO {{user.username}}</a>
@@ -55,7 +55,7 @@
 				<div>
 					<a href="{% url 'logout' %}" class="btn btn-danger mr-2" style="background-color: #BF6300;">SALIR</a>
 				</div>
-				{% else %}	
+				{% else %}
 				<div>
 					<div>
 						<a href="{% url 'usuarios:registrar' %}" class="btn btn-danger mr-2" style="background-color: #BF6300;">REGISTRARSE</a>
@@ -63,15 +63,15 @@
 					</div>
 				</div>
 				{% endif %}
-			</div>				
-		</div>						
+			</div>
+		</div>
 	</nav>
-	<!--FIN NAVBAR-->		
-    <div class="container mt-4 mb-4">        
+	<!--FIN NAVBAR-->
+    <div class="container mt-4 mb-4">
         {% block contenido %}
-    
-        {% endblock %}        
-    </div>	
+
+        {% endblock %}
+    </div>
 	<!--FOOTER-->
 	<footer id="sticky-footer" class="py-4 text-white" style="background-color: #007F5F;">
 		<div class="container text-center" >
